@@ -1,5 +1,7 @@
 2006-03-02  Shawn Betts  <sabetts@vcn.bc.ca>
 
+	* stumpwm.lisp (stumpwm-internal-loop): listen for events and process them when they come in.
+
 	* core.lisp (frame-raise-window): don't do anything if w is nil
 	(expand-frame): use ecase
 	(expand-tree): properly expand the tree to take up the space.
